# untitled1

./: CMakeLists.txt  Particle.cpp  Particle.h  Particles.cpp  Particles.h  config.h  main.cpp  spritesheet2.ase
SFMLWinGCCStatic/SFML-2.4.2-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
SFMLWinGCCStatic/SFML-2.4.2-build/src/SFML/: Makefile  cmake_install.cmake
SFMLWinGCCStatic/SFML-2.4.2-build/src/SFML/Audio/: Makefile  cmake_install.cmake
SFMLWinGCCStatic/SFML-2.4.2-build/src/SFML/Graphics/: Makefile  cmake_install.cmake
SFMLWinGCCStatic/SFML-2.4.2-build/src/SFML/Main/: Makefile  cmake_install.cmake
SFMLWinGCCStatic/SFML-2.4.2-build/src/SFML/Network/: Makefile  cmake_install.cmake
SFMLWinGCCStatic/SFML-2.4.2-build/src/SFML/System/: Makefile  cmake_install.cmake
SFMLWinGCCStatic/SFML-2.4.2-build/src/SFML/Window/: Makefile  cmake_install.cmake
SFMLWinGCCStatic/SFML-2.4.2-source/: CMakeLists.txt
SFMLWinGCCStatic/SFML-2.4.2-source/cmake/Modules/: FindFreetype.cmake
SFMLWinGCCStatic/SFML-2.4.2-source/cmake/toolchains/: android.toolchain.cmake
SFMLWinGCCStatic/SFML-2.4.2-source/src/SFML/: CMakeLists.txt
assets/: spritesheet.ase
